--- a/src/app/centro/centro.component.html
+++ b/src/app/centro/centro.component.html
@@ -21,6 +21,9 @@
             <ng-container *ngSwitchCase="'login'">
                 <ng-container *ngTemplateOutlet="template_login"></ng-container>
             </ng-container>
+            <ng-container *ngSwitchCase="'recuperar_cuenta'">
+                <ng-container *ngTemplateOutlet="template_recuperar_cuenta"></ng-container>
+            </ng-container>
 
             <ng-container *ngSwitchDefault>Default Template</ng-container>
 
@@ -33,69 +36,100 @@
 <!-- Login Home-->
 <ng-template #template_home>
 
-  <!--Área de puntuación-->
-  <div class="row" style="border: solid 1px gray">
-    <div class="col-sm-1">    
-    <h1><span class="badge bg-secondary"># 1</span></h1>          
+    <!--Área de puntuación-->
+    <div class="row" style="border: solid 1px gray">
+        <div class="col-sm-1">
+            <h1><span class="badge bg-secondary"># 1</span></h1>
+        </div>
+        <div class="col-sm-1">
+            <img src="assets/imagenes/icono_preguntas.jpg" class="img-thumbnail" width="50%" alt="...">
+        </div>
+        <div class="col-sm-6">
+            <h1><span class="badge bg-secondary">35 de 60 O O O O O O O O O O</span></h1>
+        </div>
+        <div class="col-sm-1">
+            <img src="assets/imagenes/icono_preguntas.jpg" class="img-thumbnail" width="50%" alt="...">
+        </div>
+        <div class="col-sm-3">
+            <h1><span class="badge bg-secondary">Mensaje Ok</span></h1>
+        </div>
     </div>
-    <div class="col-sm-1">              
-    <img src="assets/imagenes/icono_preguntas.jpg" class="img-thumbnail" width="50%" alt="...">
-    </div>     
-    <div class="col-sm-6">              
-    <h1><span class="badge bg-secondary">35 de 60 O O O O O O O O O O</span></h1> 
-    </div>  
-    <div class="col-sm-1">              
-    <img src="assets/imagenes/icono_preguntas.jpg" class="img-thumbnail" width="50%" alt="...">
-    </div>    
-    <div class="col-sm-3">    
-    <h1><span class="badge bg-secondary">Mensaje Ok</span></h1>          
-    </div>                       
-</div>
 
-<!--Área de pregunta-->
-<div class="row" style="border: solid 1px gray">
-    <div class="col-sm-3">    
+    <!--Área de pregunta-->
+    <div class="row" style="border: solid 1px gray">
+        <div class="col-sm-3">
 
-    <button type="button" class="btn btn-info">pregunta</button>
+            <button type="button" class="btn btn-info">pregunta</button>
 
 
+        </div>
     </div>
-</div>
 
-<!--Área de respuesta-->
-<div class="row" style="border: solid 1px gray">
-    <div class="col-sm-3">    
+    <!--Área de respuesta-->
+    <div class="row" style="border: solid 1px gray">
+        <div class="col-sm-3">
 
-    <button type="button" class="btn btn-info">respuesta</button>
+            <button type="button" class="btn btn-info">respuesta</button>
 
 
+        </div>
     </div>
-</div>          
 </ng-template>
 
 <!-- Login template-->
 <ng-template #template_login>
     <div class="row" style="border: solid 1px gray">
-        <div class="col-sm-4">  
-    
-        <form [formGroup]="formularioLogin" (ngSubmit)="onSubmitLoginUsuarioHash()">        
-            <div class="input-group">
-                <span class="input-group-text" for="email">E-mail: </span>
-                <input id="_email" type="text" formControlName="email" placeholder="PrepoAcademy@gmail.com" class="form-control">
-            </div>    
-            <div class="input-group">
-                <span class="input-group-text" for="password">Contraseña: </span>
-                <input id="_password" type="text" formControlName="password" placeholder="*******" class="form-control">
-            </div>           
-    
-            <button type="submit" class="btn btn-info" [disabled]="!formularioLogin.valid">Ingresar</button>
-            <div class="input-group">
-                <span>{{mensajeErrorLogin}}</span>
-            </div>                
-            
-        </form>
-    
+        <div class="col-sm-4">
+
+            <form [formGroup]="formularioLogin" (ngSubmit)="onSubmitLoginUsuarioHash()">
+                <div class="input-group">
+                    <span class="input-group-text" for="email">E-mail: </span>
+                    <input id="_email" type="email"
+                        [class.is-invalid]="formularioLogin.get('email')?.invalid"
+                        formControlName="email" placeholder="PrepoAcademy@gmail.com" class="form-control">
+                </div>
+                <div class="input-group">
+                    <span class="input-group-text" for="password">Contraseña: </span>
+                    <input id="_password" type="text" formControlName="password" placeholder="*******"
+                        class="form-control">
+                </div>
+
+                <button type="submit" class="btn btn-info" [disabled]="!formularioLogin.valid">Ingresar</button>
+                <div class="input-group">
+                    <span>{{mensajeErrorLogin}}</span>
+                </div>
+
+            </form>
+            <button type="button" class="btn btn-info" (click)="recuperarCuenta()">Recuperar cuenta</button>
+
         </div>
     </div>
-        
+
+</ng-template>
+
+<!-- Recuperar cuenta template-->
+<ng-template #template_recuperar_cuenta>
+    <div class="row" style="border: solid 1px gray">
+        <div class="col-sm-12">
+
+            <form [formGroup]="formulario_recuperar_cuenta" (ngSubmit)="recuperarCuenta()">
+                <div class="input-group">
+                    <span class="input-group-text">E-mail de recuperación: </span>
+                    <input type="email"
+                        [class.is-invalid]="formulario_recuperar_cuenta.get('email_recuperacion')?.invalid"
+                        #emailrecuperar type="text" formControlName="email_recuperacion" class="form-control">
+                </div>
+
+                <button type="submit" class="btn btn-info" [disabled]="!formulario_recuperar_cuenta.valid">Enviar
+                    Correo</button>
+                <div class="input-group">
+
+                </div>
+
+            </form>
+
+
+        </div>
+    </div>
+
 </ng-template>
